添加通用复杂查询功能